<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/nav_home_icon"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/nav_history_icon"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_scan"
        android:icon="@drawable/ic_nav_scan_rounded"
        android:title="@string/nav_scan" />
    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/nav_feedback_icon"
        android:title="@string/nav_feedback" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/nav_account_icon"
        android:title="@string/account_title" />
</menu>
